--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 site_name: XLOFT Docs
 site_description: "(XLOFT) X-Library of tools."
 site_url: https://kebasyaty.github.io/xloft/
-site_author: Kebasyaty
-copyright: Copyright &copy; 2025 Maintained by <a href="https://github.com/kebasyaty">Kebasyaty</a>
+site_author: kebasyaty
+copyright: Copyright &copy; 2025 Maintained by <a href="https://github.com/kebasyaty">kebasyaty</a>
 repo_name: kebasyaty/xloft
 repo_url: https://github.com/kebasyaty/xloft
 
